tests/baselines/reference/interfaceWithStringIndexerHidingBaseTypeIndexer3.errors.txt
==== tests/cases/compiler/interfaceWithStringIndexerHidingBaseTypeIndexer3.ts (1 errors) ====
    interface Base {
        [x: number]: { a: number }
        1: {
            a: number; b: number;
        }
    }
    
    interface Derived extends Base {
        [x: number]: {
            a: number; b: number
        };
        // error
        2: {
        ~~~~
            a: number;
    ~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! interfaceWithStringIndexerHidingBaseTypeIndexer3.ts(13,5): error TS2170: All numerically named properties must be assignable to numeric indexer type '{ a: number; b: number; }':
!!! 	Type '{ a: number; }' is missing property 'b' from type '{ a: number; b: number; }'.
    }